--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^2.3.0",
